--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,31 @@
 name: Build APK
-on: [push] # This triggers the build every time you save code
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4 # Updated to v4
+
+      - uses: actions/setup-java@v4 # Updated to v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+          
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.19.0'
           channel: 'stable'
+
+      # This creates the missing Android configuration files
+      - run: flutter create . --platforms=android
+
       - run: flutter pub get
+      
       - run: flutter build apk --release
+      
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # Updated to v4
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
