--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: the_hitters_ledger
+name: thehittersledger
 description: Baseball mental performance app.
 publish_to: 'none'
 version: 1.0.0+1
