--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Updated to v4
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4 # Updated to v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
@@ -17,15 +17,15 @@ jobs:
           flutter-version: '3.19.0'
           channel: 'stable'
 
-      # This creates the missing Android configuration files
-      - run: flutter create . --platforms=android
+      # Forces the project name to be lowercase to avoid the "TheHittersLedger" error
+      - run: flutter create --project-name=the_hitters_ledger . --platforms=android
 
       - run: flutter pub get
       
       - run: flutter build apk --release
       
       - name: Upload APK
-        uses: actions/upload-artifact@v4 # Updated to v4
+        uses: actions/upload-artifact@v4
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
