--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,15 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      # This creates the android folder that your repo is missing
+      - name: Recreate Android platform files
+        run: flutter create . --platforms android
+
+      # This injects your logo into the newly created android folder
       - name: Generate App Icons
         run: flutter pub run flutter_launcher_icons
 
+      # This injects your splash screen into the newly created android folder
       - name: Generate Splash Screen
         run: flutter pub run flutter_native_splash:create
 
