--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   intl: ^0.18.1
   audioplayers: 4.1.0
   shared_preferences: ^2.2.0
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_test:
