Firebase Hosting Working

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,28 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"the-hitters-ledger","configurations":{"web":"1:798601163744:web:6f6c9edc7448f4079f7185"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "the-hitters-ledger",
+          "configurations": {
+            "web": "1:798601163744:web:6f6c9edc7448f4079f7185"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
