--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
   url_launcher: ^6.3.2
-
+  youtube_player_flutter: ^9.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
