--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
+  cloud_functions: ^5.0.0
   url_launcher: ^6.3.2
   youtube_player_flutter: ^9.1.1
   
