--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Flutter App
 on:
   push:
     branches:
-      - [cite_start]main  # Matches your active branch 
+      - main
 
 jobs:
   build-and-deploy:
